--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,10 +1,12 @@
 .header {
-    background: rgb(244, 244, 244);
-    width: 90px;
+    background: rgba(0, 0, 0, 0.557);
+    width: 70px;
     position: fixed;
     min-height: 100vh;
     top: 0;
     left: 0;
+    box-shadow: 0 10px 20px 10px rgba(0, 0, 0, 0.42);
+
 }
 .navMenu {
     min-height: 100vh;
@@ -14,39 +16,17 @@
     justify-content:space-between;
 }
 .links {
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 0.75rem;
     text-transform: uppercase;
     text-align: center;
-    margin: 10px auto;
-    width: 75px;
-    height: 75px;
-    border-radius: 3px;
+    margin: 20px auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #ffffffa1;
 }
 .links:hover {
     background-color: #61957ca1;
     transition: 0.5s;
-}
-
-
-/* //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-
-@media (max-width: 700px) {
-    .header {
-        flex-direction: column;
-    }
-    .links:hover{
-        background: none;
-        color: #61957ca1;
-    }
-}
-@media (max-width: 480px) {
-    .nav {
-        flex-direction:row;
-        justify-content: center;
-    }
-    .links:hover{
-        background: none;
-        color: #61957ca1;
-    }
 }
