--- a/client/src/components/Box/Box.module.css
+++ b/client/src/components/Box/Box.module.css
@@ -1,5 +1,20 @@
 .principalBox {
-    background-color: aqua;
-    width: 300px;
-    height: auto;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    border: solid 0.5px rgba(255, 255, 255, 0.5);
+    max-width: 400px;
+    max-height: 400px;
+    overflow: hidden;
+    color: white;
+    break-inside: avoid;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 10px 20px 5px rgba(0, 0, 0, 0.359);
+    
+}
+.nameBox {
+    background-color:  rgba(1, 1, 1, 0.1);
+    display: flex;
+    flex-direction: row;
+    font-size: 1rem;
 }
