--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -11,6 +11,20 @@
     width: 100%;
     margin: 0 auto 0 90px
 }
+.createNewBox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.newBoxButton {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 2.3rem;
+    font-weight: bold;
+    border: solid 1px rgb(58, 58, 58);
+    cursor: pointer;
+}
 .allCardsBox {
     max-width: 90%;
     margin: 0 auto;
