--- a/client/src/components/Box/Box.module.css
+++ b/client/src/components/Box/Box.module.css
@@ -17,4 +17,43 @@
     display: flex;
     flex-direction: row;
     font-size: 1rem;
+    justify-content: space-between;
+    height: 50px;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.nameTitle {
+    margin-left: 20px;
+    
+}
+.buttonBox{
+    opacity: 0;
+    transition: .5s;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    align-items: center;
+}
+.subButtonBox {
+    margin-right: 20px;
+}
+.buttonBox:hover {
+    opacity: 1;
+}
+.button {
+    width: 1.7rem;
+    height: 1.7rem;
+    margin-left: 5px;
+    border-radius: 50%;
+    background-color: transparent;    
+    filter:  opacity(0.6) drop-shadow(0 0 0 rgb(43, 43, 44));
+    cursor: pointer;
+}
+.button:hover {
+    background-color: rgb(151, 151, 151);
+    transition: 0.5s;
+    box-shadow: 0 2px 50px 10px rgba(0, 0, 0, 0.1);
+    border: solid 0.5px white;
 }
