--- a/client/src/components/Link/Link.module.css
+++ b/client/src/components/Link/Link.module.css
@@ -19,12 +19,11 @@
     flex-direction: row;
     justify-content: space-between;
     height: 30px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 5px 5px 0 0;
-
+    border-radius: 5px;
+    align-items: center;
 }
 .nameTitle {
-    margin: 0;
+    margin-left: 15px;
     
 }
 .buttonBox{
@@ -35,16 +34,22 @@
     justify-content: flex-end;
     position:absolute;
     margin: 0 auto;
+    align-items: center;
 
 }
 .buttonBox:hover {
     opacity: 1;
     
 }
+.subButtonBox {
+    display: flex;
+    margin-right: 15px;
+    align-items: center;
 
+}
 .button {
-    width: 1.7rem;
-    height: 1.7rem;
+    width: 1.5rem;
+    height: 1.5rem;
     margin-left: 5px;
     border-radius: 50%;
     background-color: transparent;    
@@ -59,4 +64,8 @@
     box-shadow: 0 2px 50px 10px rgba(0, 0, 0, 0.1);
     border: solid 0.5px white;
 
+}
+.editBox {
+    height: 50px;
+    margin: 10px auto;
 }
