--- a/client/src/components/Box/Box.module.css
+++ b/client/src/components/Box/Box.module.css
@@ -12,30 +12,46 @@
     box-shadow: 0 10px 20px 5px rgba(0, 0, 0, 0.359);
     
 }
-.nameBox {
+.nameBox, .formBox {
     background-color:  rgba(1, 1, 1, 0.1);
     display: flex;
     flex-direction: row;
     font-size: 1rem;
     justify-content: space-between;
     height: 50px;
+    width: 100%;
     align-items: center;
     margin-bottom: 10px;
 }
 .nameTitle {
     margin-left: 20px;
+    font-size: 1.5rem;
 }
-.buttonBox{
-    opacity: 0;
+.inputName {
+    background-color: rgba(255, 255, 255, 0.242);
+    color: black;
+    border-radius: 5px;
+    border: solid 0.5px rgba(255, 255, 255, 0.201);
+    height: 1.7rem;
+    width: 60%;
+    margin-left: 20px;
+}
+.inputName:hover {
+    background-color: rgba(255, 255, 255, 0.516);
+    box-shadow: 0 2px 15px 10px rgba(191, 191, 191, 0.1);
+}
+
+.buttonBox {
     transition: .5s;
     width: 100%;
-    height: 50px;
     display: flex;
     justify-content: flex-end;
-    position: absolute;
     align-items: center;
+    opacity: 0;
+    height: 50px;
+    position: absolute;
 }
-.subButtonBox {
+.subButtonBox, .buttonBox2 {
     display: flex;
     align-items: center;
     margin-right: 20px;
@@ -52,10 +68,16 @@
     filter:  invert(1);
     cursor: pointer;
 }
+.buttonDefault {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
 .button:hover {
     background-color: rgb(151, 151, 151);
     transition: 0.5s;
     box-shadow: 0 2px 50px 10px rgba(96, 96, 96, 0.1);
     border: solid 0.5px white;
 }
-
