--- a/client/src/components/Link/Link.module.css
+++ b/client/src/components/Link/Link.module.css
@@ -24,7 +24,7 @@
 }
 .nameTitle {
     margin-left: 15px;
-    
+    position: relative;
 }
 .buttonBox{
     opacity: 0;
@@ -86,6 +86,15 @@
     width: 65%;
     margin: 5px 0 0 15px;
 }
+
+a {
+    color: rgb(26, 25, 25);
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+a:hover {
+    font-size: 1rem;
+}
 .input {
     background-color: rgba(255, 255, 255, 0.242);
     color: black;
@@ -94,6 +103,7 @@
     height: 1.3rem;
     margin: 0 0 5px 0;
     width: 100%;
+    padding-left: 10px;
 }
 .input:hover {
     background-color: rgba(255, 255, 255, 0.516);
