--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -15,6 +15,11 @@
     flex-direction: column;
     justify-content:space-between;
 }
+.logo {
+    margin: 20px auto;
+    width: 50px;
+    height: 50px;
+}
 .links {
     color: rgb(255, 255, 255);
     font-size: 0.75rem;
