--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,7 +1,16 @@
+/* 
+font-family: 'Dawning of a New Day', cursive;
+font-family: 'Licorice', cursive;
+
+font-family: 'Coiny', cursive;
+font-family: 'Passions Conflict', cursive;
+font-family: 'Square Peg', cursive;
+ */
+
 .containerBox {
     width: 100%;
     min-height: 100vh;
-    background: url("../../image/imagePrueba.jpg") no-repeat center center;
+    background: url("../../image/background1.jpg") no-repeat center center;
     background-size:cover;
     display: flex;
     flex-wrap: wrap;
@@ -60,6 +69,9 @@
     height: 1.7rem;
     width: 240px;
     margin: 0 auto;
+    padding-left: 5px;
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 1rem;
 }
 .inputName:hover {
     background-color: rgba(255, 255, 255, 0.516);
@@ -93,6 +105,21 @@
     padding: 0;
     display: flex;
     align-items: center;
+}
+.greetingBox {
+    width: 60%;
+    height: 150px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.greeting {
+    color: rgb(223, 221, 221);
+    margin: 0 5PX;
+    font-size: 3rem;
+    font-family: 'Square Peg', cursive;
 }
 .allCardsBox {
     max-width: 90%;
