--- a/client/src/components/WelcomePage/WelcomePage.module.css
+++ b/client/src/components/WelcomePage/WelcomePage.module.css
@@ -1,7 +1,7 @@
 .containerBox {
     width: 100%;
     min-height: 100vh;
-    background: url("../../image/background2.jpg") no-repeat center center;
+    background: url("../../image/background8.jpg") no-repeat center center;
     background-size:cover;
     display: flex;
     align-items: center;
@@ -11,9 +11,9 @@
     display: flex;
     flex-direction:column;
     padding: 30px;
-    background-color:  rgba(255, 255, 255, 0.1);
+   /*   background-color:  rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
-    /* border: solid 0.5px rgba(255, 255, 255, 0.5); */
+   border: solid 0.5px rgba(255, 255, 255, 0.5);  */
     border-radius: 8px;
 
 }
@@ -39,7 +39,7 @@
 .button {
     font-family: 'Julius Sans One', sans-serif;
     font-weight: bolder;
-    height: 40px;
+    height: 35px;
     width: 90px;
     margin: 10px 5px 0 5px;
     background-color:  rgb(255, 255, 255);
@@ -47,6 +47,7 @@
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    text-decoration: none,
 }
 .button:hover {
     background-color: rgb(151, 151, 151);
