--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -58,3 +58,8 @@
     border: solid 0.5px white;
     color: aliceblue;
 }
+.text {
+    margin: 5px 0 0 0;
+    font-size: 0.8rem;
+    font-weight: normal;
+}
