--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -15,23 +15,20 @@
     flex-direction: column;
     justify-content:space-between;
 }
-.logo {
+.logo, .logout {
     margin: 20px auto;
     width: 50px;
     height: 50px;
 }
-.links {
-    color: rgb(255, 255, 255);
-    font-size: 0.75rem;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 20px auto;
-    width: 50px;
-    height: 50px;
+.logout {
+    filter:  invert(1);
+    cursor: pointer;
     border-radius: 50%;
-    background-color: #ffffffa1;
+    background-color: transparent; 
 }
-.links:hover {
-    background-color: #61957ca1;
+.logout:hover {
+    background-color: rgb(151, 151, 151);
     transition: 0.5s;
+    box-shadow: 0 2px 50px 10px rgba(0, 0, 0, 0.1);
+    border: solid 0.5px white;
 }
